--- a/startPage/style.css
+++ b/startPage/style.css
@@ -64,25 +64,16 @@ html {
 }
 
 
-/* .video-container video { */
-    /* min-width: 100%; */
-    /* min-height: 100%; */
-    /* object-fit: cover; */
-    /* position: absolute; */
-    /* top: 50%; */
-    /* left: 50%; */
-    /* transform: translate(-50%, -50%); */
-/* } */
-.video-container video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;  /* 保持 cover 但修改尺寸逻辑 */
-    position: absolute;
-    /* 移除之前的居中定位，改用以下方式 */
-    top: 0;
-    left: 0;
-    /* 或者根据视频比例选择以下一种 */
-}
+ .video-container video { 
+     min-width: 100%; 
+     min-height: 100%; 
+    object-fit: cover; 
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+ } 
+
 .btn {
     display: inline-block;
     color: #fff;
